error.txt
1. git 충돌
mh1 브랜치에 node_modules를 포함 시키지 않고 있다가 push 하기 위해 merge 하는 과정에서 에러 발생
=> unstaged 상태의 파일이 존재해서 에러 발생
=> git merging is not possible because you have unmerged files 에러 발생
# git status로 상태 확인 후
git commit -am "메세지" a옵션 : -a 옵션을 붙이면 변경된 파일(신규로 추가된 파일을 제외)을 검출하여 인덱스에 추가하고, 그것들을 커밋하는 동작을 명령어로 실행할 수 있습니다. 

git pull
git push origin master 
마스터 브랜치일때 하기/

git checkout mh1 으로 mh1 브랜치에서 작업 중이다가 commit 한 다음에
git checkout master로 돌아가서 git merger mh1 으로 병합 한 후 
git pull (충돌방지) 다음 git push origin master 해주기 
===================================================================================
2. node_modules 폴더 재설치 필요
-> node_modules 폴더를 git 에서 다시 push 해왔더니 npm start시 오류가 발생.
> myKeyword@0.0.0 start C:\Users\조민희\Desktop\myKeyword
> node ./bin/www

module.js:130
    throw e;
    ^

SyntaxError: Error parsing C:\Users\조민희\Desktop\myKeyword\node_modules\http-errors\package.json: Unexpected token < in JSON at position 3
    at JSON.parse (<anonymous>)
    at readPackage (module.js:126:52)
    at tryPackage (module.js:136:13)
    at Function.Module._findPath (module.js:218:20)
    at Function.Module._resolveFilename (module.js:545:25)
    at Function.Module._load (module.js:474:25)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (C:\Users\조민희\Desktop\myKeyword\app.js:1:81)
    at Module._compile (module.js:652:30)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! myKeyword@0.0.0 start: `node ./bin/www`
npm ERR! Exit status 1
npm ERR!
npm ERR! Failed at the myKeyword@0.0.0 start script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     C:\Users\조민희\AppData\Roaming\npm-cache\_logs\2019-01-14T09_09_32_003Z-debug.log

node_modules가 제대로 설치가 되지 않아 발생한거 같음. 
npm install로 모듈을 다시 설치해서 해결.

===================================================================================
3. 라우팅 해주면서 ejs 파일에 배열 넘겨주고 <%= %> 이렇게 찍으려 했더니 SyntaxError 발생함
missing ) after argument list in C:\Users\조민희\Desktop\myKeyword\views\result.ejs while compiling ejs If the above error is not helpful, you may want to try EJS-Lint: https://github.com/RyanZim/EJS-Lint
SyntaxError: missing ) after argument list in C:\Users\조민희\Desktop\myKeyword\views\result.ejs while compiling ejs

저거 삭제하면 안나는거 봐서 저부분이 말썽인데,,,

해결 : 라우팅 수정하면서 오타가 있었나봄... 그래서 다시 복붙해옴 되던거 부터,
그 뭐냐 원래 <%= Email %> 이게 먹었엇는데 내가 다시 쓴 라우팅 함수에서는 이게작동하지 않아서 원래 되던거에 복붙해서 테스트하니까
잘됨. 그러니까 내잘못 오타 ㅇㅅㅇ

4. MongoDB 콜렉션 생성 시 autoIndex옵션을 줄 때 invalid error 발생
autoIndex => autoIndexID 로 줘야함.
https://docs.mongodb.com/v3.2/reference/method/db.createCollection/
문서에서 찾음.
3.4 버전 이상에서는 autoIndexId 옵션이 사라짐. 왜?

5. mongoose version : 5.4.4
WARNING: The `useMongoClient` option is no longer necessary in mongoose 5.x, please remove it.
mongoose.connect(process.env.MONGO_URI, { useMongoClient: true }) => mongoose.connect(process.env.MONGO_URI) => mongoose.connect(process.env.MONGO_URI, { useNewUrlParser: true })
(node:11324) DeprecationWarning: current URL string parser is deprecated, and will be removed in a future version. To use the new parser, pass option { useNewUrlParser: true } to MongoClient.connect.

6. 
(node:25200) DeprecationWarning: collection.ensureIndex is deprecated. Use createIndexes instead.
By default, Mongoose 5.x calls the MongoDB driver's ensureIndex() function. The MongoDB driver deprecated this function in favor of createIndex(). Set the useCreateIndex global option to opt in to making Mongoose use createIndex() instead.

mongoose.set('useCreateIndex', true);
You can also configure useCreateIndex by passing it through the connection options.

mongoose.connect(uri, { useCreateIndex: true });

7. mKeyword is not a constructor
TypeError: mKeyword is not a constructor
    at C:\Users\조민희\Desktop\myKeyword\routes\users.js:102:20

디비 연결 다하고 create 만들면서 생긴 오류
var mKeyword = new mKeyword(); 이부분에서 생긴건데 왜 그런거지...
constructor가 없다는데 강의에서 constructor를 해주는게 없는데.

해결 : var mKeyword = new mKeyword() 로 해놨는데 app에서 넘겨주는 파라미터 이름이 mKeyword인데
여기다가 지역변수로 mKeyword를 한번 더해가지고 제대로 안들어 간거.
app 파라미터 이름을 User로 변경해줌
var mKeyword = new User() 이런식으로 변경

8. db.remove 동작시
(node:3544) DeprecationWarning: collection.remove is deprecated. Use deleteOne, deleteMany, or bulkWrite instead.